Added loading image

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 <body>
   <app-root></app-root>
   <div class="loading" style="opacity:0">
-    <h1>Loading</h1>
+    <img src="assets/loading.gif" alt="Loading" height="auto" width="30%"/>
   </div>
 </body>
 </html>
